added user profile + stylized the current pages

--- a/frontend/src/assets/scss/components/Footer.scss
+++ b/frontend/src/assets/scss/components/Footer.scss
@@ -12,4 +12,12 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+
+    button {
+        color: white;
+        appearance: none;
+        border: none;
+        outline: none;
+        background: none;
+    }
 }
