--- a/frontend/src/assets/scss/components/Header.scss
+++ b/frontend/src/assets/scss/components/Header.scss
@@ -1,11 +1,17 @@
 .header {
     position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     
     width: 100vw;
     height: 40px;
     background-color: #212121;
     border-bottom: 1px solid #444;
-    margin: 0;
+
 
     .title{
         margin: 0;
@@ -16,9 +22,23 @@
         text-align: center;
         font-weight: 900;
 
+        grid-column: 2/3;
+
         span {
             font-weight: 300;
         }
+    }
 
+    .logout-btn {
+        appearance: none;
+        border: none;
+        outline: none;
+        background: none;
+        color: white;
+        margin: 0 100px 0 0;
+        padding: 0;
+        justify-self: end;
+
+        grid-column: 3/4;
     }
 }
