--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -8,6 +8,7 @@ body{
 #app {
   width: 100vh;
   min-height: 100vh;
+  align-content: center;
 }
 
 .view{
@@ -18,8 +19,9 @@ body{
 @import "./pages/login.scss";
 @import "./pages/register.scss";
 @import "./pages/feed.scss";
+@import "./pages/post.scss";
+@import "./pages/profile.scss";
 
 //COMPONENTS
 @import "./components/Header.scss";
 @import "./components/Footer.scss";
-@import "./components/Post.scss";
